--- a/index.html
+++ b/index.html
@@ -44,6 +44,19 @@
 			}
 
 			@media (max-width: 600px) {
+				html, body {
+  					overflow-x: hidden;
+		 			 width: 100%;
+					height: 100%;
+					margin: 0;
+					}
+
+				* {
+  					box-sizing: border-box;
+					margin: 0;
+					padding: 0;
+				   }
+
 				header {
 					flex-direction: column;
 					align-items: center;
