--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>Tuğrul Yadaş</title>
 		<link rel="stylesheet" href="index.css" />
 		<!-- Safari ve modern tarayıcılar için -->
-		<meta name="theme-color" content="#3e3e3e">
+		<meta name="theme-color" content="#141414">
 		<!-- iPhone üst bar rengini değiştirir (yalnızca Safari tam ekran modunda etkili) -->
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
