--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 
 			@media (max-width: 600px) {
 				html, body {
+					background-color: linear-gradient(to right, #3e3e3e, #1a1a1a);
   					overflow-x: hidden;
 		 			 width: 100%;
 					height: 100%;
