--- a/AboutMe.html
+++ b/AboutMe.html
@@ -5,10 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tuğrul Yadaş</title>
     <link rel="stylesheet" href="AboutMe.css">
+	<meta name="theme-color" content="#141414" />
     <style>
      
       @media (max-width: 1024px) {
-        ul {
+       html,body {
+		overflow-x: hidden;
+		width: 100%;
+		height: 100%;
+		margin: 0;
+				}
+
+	* {
+		box-sizing: border-box;
+		margin: 0;
+		padding: 0;
+				}
+	      ul {
 	margin-left: 20px;
 }
      
@@ -103,7 +116,19 @@
       }
   
 @media (max-width: 600px) {
-  ul {
+   html,body {
+		overflow-x: hidden;
+		width: 100%;
+		height: 100%;
+		margin: 0;
+				}
+
+	* {
+		box-sizing: border-box;
+		margin: 0;
+		padding: 0;
+				}
+	ul {
 	margin-left: 20px;
 }
 
