--- a/Contact.html
+++ b/Contact.html
@@ -9,9 +9,21 @@
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
 		/>
-
+		<meta name="theme-color" content="#141414" />
 		<style>
 			@media (max-width: 1024px) {
+				 html,body {
+		overflow-x: hidden;
+		width: 100%;
+		height: 100%;
+		margin: 0;
+				}
+
+	* {
+		box-sizing: border-box;
+		margin: 0;
+		padding: 0;
+				}
 				ul {
 					margin-left: 20px;
 				}
@@ -42,6 +54,18 @@
 				}
 			}
 			@media screen {
+				 html,body {
+		overflow-x: hidden;
+		width: 100%;
+		height: 100%;
+		margin: 0;
+				}
+
+	* {
+		box-sizing: border-box;
+		margin: 0;
+		padding: 0;
+				}
 				ul {
 					margin-left: 20px;
 				}
