--- a/Skills.html
+++ b/Skills.html
@@ -5,8 +5,21 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Tuğrul Yadaş</title>
 		<link rel="stylesheet" href="Skills.css" />
+		<meta name="theme-color" content="#141414">
 		<style>
 			@media (max-width: 1024px) {
+				html,body {
+					overflow-x: hidden;
+					width: 100%;
+					height: 100%;
+					margin: 0;
+				}
+
+				* {
+					box-sizing: border-box;
+					margin: 0;
+					padding: 0;
+				}
 				ul {
 					margin-left: 20px;
 				}
@@ -38,6 +51,18 @@
 			}
 
 			@media (max-width: 600px) {
+				html,body {
+					overflow-x: hidden;
+					width: 100%;
+					height: 100%;
+					margin: 0;
+				}
+
+				* {
+					box-sizing: border-box;
+					margin: 0;
+					padding: 0;
+				}
 				header {
 					flex-direction: column;
 					align-items: center;
