--- a/MyProjects.html
+++ b/MyProjects.html
@@ -5,30 +5,26 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Tuğrul Yadaş</title>
 		<link rel="stylesheet" href="MyProjects.css" />
-		<meta name="theme-color" content="#141414" />
 		<style>
 				@media (max-width: 1024px) {
-				html,body {
-					overflow-x: hidden;
-					width: 100%;
+				html, body {
+  					overflow-x: hidden;
+		 			 width: 100%;
 					height: 100%;
 					margin: 0;
-				}
+					background-color: linear-gradient(to right, #3e3e3e, #1a1a1a);
+					}
 
 				* {
-					box-sizing: border-box;
+  					box-sizing: border-box;
 					margin: 0;
 					padding: 0;
-				}
+				   }
 					ul {
 					margin-left: 20px;
 				}
 
-				header {
-					flex-direction: column;
-					align-items: center;
-					text-align: center;
-				}
+				
 
 				.logo {
 					font-size: 36px;
@@ -49,25 +45,32 @@
 					margin: 10px 0;
 				}
 			}
+			@media (max-width:800px)
+			{
+				#head-container {
+					flex-direction: column;
+					justify-content: flex-end;
+					align-items: center;
+					gap: 0px;
+					padding-top: 25px;
+				}
 
+			}
 			@media (max-width: 600px) {
-				html,body {
-					overflow-x: hidden;
-					width: 100%;
+				html, body {
+  					overflow-x: hidden;
+		 			 width: 100%;
 					height: 100%;
 					margin: 0;
-				}
+					background-color: linear-gradient(to right, #3e3e3e, #1a1a1a);
+					}
 
 				* {
-					box-sizing: border-box;
+  					box-sizing: border-box;
 					margin: 0;
 					padding: 0;
-				}
-				header {
-					flex-direction: column;
-					align-items: center;
-					text-align: center;
-				}
+				   }
+				
 				.logo {
 					font-size: 25px;
 				}
@@ -88,30 +91,58 @@
 					font-size: 10px;
 				}
 			}
+			@media (max-width:500px	) {
+				header {
+					flex-direction: column;
+					align-items: center;
+					text-align: center;
+				}
+				.LangButton{
+					min-width: 1px;
+					width: 50px;
+					font-size: 10px;
+					height: 20px;
+					padding: 5px;
+					background: linear-gradient(to right, #007bffd0, #00c8ffd4);
+				}
+				main {
+					padding-top: 60px;
+				}
+			}
 		</style>
 	</head>
 
 	<body>
 		<div class="container">
 			<header>
-				<a href="index.html"> <div class="logo">Tuğrul Yadaş</div></a>
-				<nav>
-					<a href="MyProjects.html">
-						<button type="button" id="projects" class="MenuButon"><b class="translatable" data-en="MYPROJECTS">PROJELERİM</b></button>
-					</a>
-					<a href="Skills.html">
-						<button type="button" class="MenuButon"><b class="translatable" data-en="SKILLS">YETENEKLERİM</b></button>
-					</a>
-					<a href="AboutMe.html">
-						<button type="button" class="MenuButon"><b class="translatable" data-en="ABOUTME&CV">HAKKIMDA&CV</b></button>
-					</a>
-					<a href="Contact.html">
-						<button type="button" class="MenuButon"><b class="translatable" data-en="CONTACT">İLETİŞİM</b></button>
-					</a>
+				<div id="head-container">
+					<a href="index.html"> <div class="logo">TuğrulYadaş</div></a>
+					<nav>
+						<a href="MyProjects.html">
+							<button type="button" class="MenuButon active">
+								<b class="translatable" data-en="MYPROJECTS">PROJELERİM</b>
+							</button>
+						</a>
+						<a href="Skills.html">
+							<button type="button" class="MenuButon active">
+								<b class="translatable" data-en="SKILLS">YETENEKLERİM</b>
+							</button>
+						</a>
+						<a href="AboutMe.html">
+							<button type="button" class="MenuButon active">
+								<b class="translatable" data-en="ABOUTME&CV">HAKKIMDA&CV</b>
+							</button>
+						</a>
+						<a href="Contact.html">
+							<button type="button" class="MenuButon active">
+								<b class="translatable" data-en="CONTACT">İLETİŞİM</b>
+							</button>
+						</a>
+					</nav>
+				</div>
 				<button type="button" onclick="toggleLanguage()" class="LangButton">
-						<b class="translatable" data-en="TR">ENG</b>
-					</button>
-				</nav>
+					<b class="translatable" data-en="TR">ENG</b>
+				</button>
 			</header>
 
 			<main><div class="project-grid">
