--- a/AboutMe.html
+++ b/AboutMe.html
@@ -244,6 +244,8 @@
 				}
 			}
     </style>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playpen+Sans+Thai:wght@100..800&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -263,7 +265,7 @@
 							</button>
 						</a>
 						<a href="AboutMe.html">
-							<button type="button" class="MenuButon active">
+							<button type="button" class="MenuButon active" id="CurrentPage">
 								<b class="translatable" data-en="ABOUTME&CV">HAKKIMDA&CV</b>
 							</button>
 						</a>
