--- a/Contact.html
+++ b/Contact.html
@@ -163,6 +163,11 @@
 				}
 			}
 		</style>
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Playpen+Sans+Thai:wght@100..800&display=swap"
+			rel="stylesheet"
+		/>
 	</head>
 
 	<body>
@@ -187,7 +192,7 @@
 							</button>
 						</a>
 						<a href="Contact.html">
-							<button type="button" class="MenuButon active">
+							<button type="button" class="MenuButon active" id="CurrentPage">
 								<b class="translatable" data-en="CONTACT">İLETİŞİM</b>
 							</button>
 						</a>
@@ -224,7 +229,7 @@
 						</div>
 					</a>
 
-					<a href="#" target="_blank">
+					<a href="https://github.com/TugrulYadas/" target="_blank">
 						<!--assadddddddddsa -->
 						<div id="github" class="infolink">
 							<i class="fab fa-github"></i>
