--- a/MyProjects.html
+++ b/MyProjects.html
@@ -5,6 +5,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Tuğrul Yadaş</title>
 		<link rel="stylesheet" href="MyProjects.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playpen+Sans+Thai:wght@100..800&display=swap" rel="stylesheet">
 		<style>
 				@media (max-width: 1024px) {
 				html, body {
@@ -119,7 +122,7 @@
 					<a href="index.html"> <div class="logo">TuğrulYadaş</div></a>
 					<nav>
 						<a href="MyProjects.html">
-							<button type="button" class="MenuButon active">
+							<button type="button" class="MenuButon active" id="CurrentPage">
 								<b class="translatable" data-en="MYPROJECTS">PROJELERİM</b>
 							</button>
 						</a>
