--- a/index.html
+++ b/index.html
@@ -114,6 +114,11 @@
 				}
 			}
 		</style>
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Playpen+Sans+Thai:wght@100..800&display=swap"
+			rel="stylesheet"
+		/>
 	</head>
 
 	<body>
@@ -199,7 +204,7 @@
 					</p>
 					<ul class="skills-list">
 						<li>
-							<span>✔</span>
+							<span class="tik" style="color: #2ecc71">✔</span>
 							<div
 								class="translatable"
 								data-en="Component-based interface development with React"
@@ -208,7 +213,7 @@
 							</div>
 						</li>
 						<li>
-							<span>✔</span>
+							<span class="tik" style="color: #2ecc71">✔</span>
 							<div
 								class="translatable"
 								data-en="Server-side programming with Node.js"
@@ -217,7 +222,7 @@
 							</div>
 						</li>
 						<li>
-							<span>✔</span>
+							<span class="tik" style="color: #2ecc71">✔</span>
 							<div
 								class="translatable"
 								data-en="Version control with Git and GitHub"
@@ -226,7 +231,7 @@
 							</div>
 						</li>
 						<li>
-							<span>✔</span>
+							<span class="tik" style="color: #2ecc71">✔</span>
 							<div
 								class="translatable"
 								data-en="Online game server management with Unreal Engine"
