--- a/Skills.html
+++ b/Skills.html
@@ -106,6 +106,11 @@
 				}
 			}
 		</style>
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Playpen+Sans+Thai:wght@100..800&display=swap"
+			rel="stylesheet"
+		/>
 	</head>
 
 	<body>
@@ -120,7 +125,7 @@
 							</button>
 						</a>
 						<a href="Skills.html">
-							<button type="button" class="MenuButon active">
+							<button type="button" class="MenuButon active" id="CurrentPage">
 								<b class="translatable" data-en="SKILLS">YETENEKLERİM</b>
 							</button>
 						</a>
