--- a/Skills.html
+++ b/Skills.html
@@ -86,6 +86,9 @@
 				footer p {
 					font-size: 10px;
 				}
+				#CurrentPage {
+					font-size: 10px;
+				}
 			}
 			@media (max-width: 500px) {
 				header {
@@ -94,12 +97,25 @@
 					text-align: center;
 				}
 				.LangButton {
-					min-width: 1px;
-					width: 50px;
-					font-size: 10px;
-					height: 20px;
-					padding: 5px;
-					background: linear-gradient(to right, #007bffd0, #00c8ffd4);
+					position: fixed; /* Sabitleme */
+					top: 20px; /* Üstten boşluk */
+					right: 0px; /* Sağdan boşluk */
+					z-index: 9999; /* Her şeyin üstünde */
+
+					background: linear-gradient(to right, #007bff, #00c6ff);
+					color: #ffffff;
+					border: none;
+					border-radius: 25px;
+					font-size: 12px;
+					font-family: "Arial", sans-serif;
+					font-weight: 500;
+					text-align: center;
+					padding: 8px 20px;
+					box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+					cursor: pointer;
+					transition: all 0.3s ease;
+					display: inline-block;
+					min-width: 70px;
 				}
 				main {
 					padding-top: 60px;
