--- a/index.html
+++ b/index.html
@@ -104,13 +104,29 @@
 					align-items: center;
 					text-align: center;
 				}
-				.LangButton {
-					min-width: 1px;
-					width: 50px;
+				#CurrentPage {
 					font-size: 10px;
-					height: 20px;
-					padding: 5px;
-					background: linear-gradient(to right, #007bffd0, #00c8ffd4);
+				}
+				.LangButton {
+					position: fixed; /* Sabitleme */
+					top: 20px; /* Üstten boşluk */
+					right: 0px; /* Sağdan boşluk */
+					z-index: 9999; /* Her şeyin üstünde */
+
+					background: linear-gradient(to right, #007bff, #00c6ff);
+					color: #ffffff;
+					border: none;
+					border-radius: 25px;
+					font-size: 12px;
+					font-family: "Arial", sans-serif;
+					font-weight: 500;
+					text-align: center;
+					padding: 8px 20px;
+					box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+					cursor: pointer;
+					transition: all 0.3s ease;
+					display: inline-block;
+					min-width: 70px;
 				}
 			}
 		</style>
@@ -204,7 +220,7 @@
 					</p>
 					<ul class="skills-list">
 						<li>
-							<span class="tik" style="color: #2ecc71">✔</span>
+							<div class="tik" style="color: #2ecc71">✔</div>
 							<div
 								class="translatable"
 								data-en="Component-based interface development with React"
@@ -213,7 +229,7 @@
 							</div>
 						</li>
 						<li>
-							<span class="tik" style="color: #2ecc71">✔</span>
+							<div class="tik" style="color: #2ecc71">✔</div>
 							<div
 								class="translatable"
 								data-en="Server-side programming with Node.js"
@@ -222,7 +238,7 @@
 							</div>
 						</li>
 						<li>
-							<span class="tik" style="color: #2ecc71">✔</span>
+							<div class="tik" style="color: #2ecc71">✔</div>
 							<div
 								class="translatable"
 								data-en="Version control with Git and GitHub"
@@ -231,7 +247,7 @@
 							</div>
 						</li>
 						<li>
-							<span class="tik" style="color: #2ecc71">✔</span>
+							<div class="tik" style="color: #2ecc71">✔</div>
 							<div
 								class="translatable"
 								data-en="Online game server management with Unreal Engine"
