--- a/Contact.html
+++ b/Contact.html
@@ -329,15 +329,11 @@
 				<div class="footer-menu">
 					<div class="footer-column">
 						<h3>Tuğrul Yadaş</h3>
-						<button onclick="CV()" class="translatable" data-en="Download CV">
-							CV İndir
-						</button>
-
-						<script>
-							function CV() {
-								window.open("CV.pdf", "_blank");
-							}
-						</script>
+						<a href="cv.pdf" target="_blank" download
+							><button class="translatable" data-en="Download CV">
+								CV İndir
+							</button></a
+						>
 					</div>
 					<div class="footer-column">
 						<h3 class="translatable" data-en="Links">Linkler</h3>
