--- a/index.html
+++ b/index.html
@@ -220,7 +220,9 @@
 					</p>
 					<ul class="skills-list">
 						<li>
-							<div class="tik" style="color: #2ecc71">✔</div>
+							<div class="tik" style="color: #2ecc71">
+								<img src="Images/tik.svg" alt="" />
+							</div>
 							<div
 								class="translatable"
 								data-en="Component-based interface development with React"
@@ -229,7 +231,9 @@
 							</div>
 						</li>
 						<li>
-							<div class="tik" style="color: #2ecc71">✔</div>
+							<div class="tik" style="color: #2ecc71">
+								<img src="Images/tik.svg" alt="" />
+							</div>
 							<div
 								class="translatable"
 								data-en="Server-side programming with Node.js"
@@ -238,7 +242,9 @@
 							</div>
 						</li>
 						<li>
-							<div class="tik" style="color: #2ecc71">✔</div>
+							<div class="tik" style="color: #2ecc71">
+								<img src="Images/tik.svg" alt="" />
+							</div>
 							<div
 								class="translatable"
 								data-en="Version control with Git and GitHub"
@@ -247,7 +253,9 @@
 							</div>
 						</li>
 						<li>
-							<div class="tik" style="color: #2ecc71">✔</div>
+							<div class="tik" style="color: #2ecc71">
+								<img src="Images/tik.svg" alt="" />
+							</div>
 							<div
 								class="translatable"
 								data-en="Online game server management with Unreal Engine"
@@ -265,15 +273,11 @@
 				<div class="footer-menu">
 					<div class="footer-column">
 						<h3>Tuğrul Yadaş</h3>
-						<button onclick="CV()" class="translatable" data-en="Download CV">
-							CV İndir
-						</button>
-
-						<script>
-							function CV() {
-								window.open("CV.pdf", "_blank");
-							}
-						</script>
+						<a href="cv.pdf" target="_blank" download
+							><button class="translatable" data-en="Download CV">
+								CV İndir
+							</button></a
+						>
 					</div>
 					<div class="footer-column">
 						<h3 class="translatable" data-en="Links">Linkler</h3>
