--- a/Skills.html
+++ b/Skills.html
@@ -5,6 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Tuğrul Yadaş</title>
 		<link rel="stylesheet" href="Skills.css" />
+
+		<meta name="theme-color" content="#141414" />
 		<style>
 			@media (max-width: 1024px) {
 				html,
