--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
 					align-items: center;
 					text-align: center;
 				}
+				.Learning-section img {
+					height: 40px;
+				}
 				#CurrentPage {
 					font-size: 10px;
 				}
