--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
 					align-items: center;
 					text-align: center;
 				}
+				.skills-list li {
+					font-size: 14px;
+				}
 				.Learning-section img {
 					height: 40px;
 				}
